--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
 {
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6281381128083",
-	"ownerNumberr": "6281381128083",
-	"cr": "Bocil Gemoy",
+	"ownerNumber": "6285850539404",
+	"ownerNumberr": "6285850539404",
+	"cr": "JAROTT",
 	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "bit.ly/gczeeoneofc",
+	"grub": "https://chat.whatsapp.com/GdYb1peYfLyAosgwrUnpNc ",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
+	"ig": "https://www.instagram.com/sdlrangkringan_/",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "Bocil",
-	"botname":"Bocil Bot",
+	"ownername": "JAROTT",
+	"botname":"Oscar Bot",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By Bocil Gemoy "
+	"fake": " 「  JAROTT  」\nCreated By JAROTT "
 }
