--- a/settings.json
+++ b/settings.json
@@ -5,10 +5,10 @@
 	"ownerNumberr": "6285850539404",
 	"cr": "JAROTT",
 	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "https://chat.whatsapp.com/GdYb1peYfLyAosgwrUnpNc ",
+	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "https://www.instagram.com/sdlrangkringan_/",
+	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
 	"ownername": "JAROTT",
 	"botname":"Oscar Bot",
